--- a/PresentationLayer/SignalR.Web/Views/Home/_Chat.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/_Chat.cshtml
@@ -24,6 +24,37 @@
 </style>
 @section scripts{
     <script type="text/javascript">
+		
+		var image;
+		function sentImageClickButton() {
+			var formData = new FormData();
+
+			formData.append('image', image);
+			formData.append('senderId', '@Model.account.Id');
+			formData.append('recieverId', '@Model.accounts[0].Id');
+			formData.append('textMessage', document.getElementById("messageInput").value);
+
+
+			$.ajax({
+				url: '/Home/UploadImage',
+				type: 'POST',
+				data: formData,
+				contentType: false, // Required for FormData
+				processData: false, // Required for FormData
+				success: function (path) {
+					sentImage(path);
+					connection.invoke("SendToUser", @Model.account.Id, @Model.accounts[0].Id, path, 'image')
+						.catch(function (err) {
+							console.error(err.toString());
+						});
+				},
+				error: function (error) {
+					// Handle errors here
+				}
+			});
+			
+		}
+		
 		// Assuming you have a function to handle image removal:
 		function removeImage() {
 			// ... your code to remove the image
@@ -105,17 +136,17 @@
 			if (@Model.accounts[0].Id == user) {
 				document.getElementById("msgContainer").innerHTML +=
 					`<div class="message">
-											<img class="avatar-md" src="/img/avatars/avatar-female-5.jpg" data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
-											<div class="text-main">
-												<div class="text-group">
-													<div class="text">
-														<div class="chat-message chat-message-image">
-																			<img src="`+message+`" style="width: 300px" alt="Image description">
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>`;
+						<img class="avatar-md" src="/img/avatars/avatar-female-5.jpg" data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+						<div class="text-main">
+							<div class="text-group">
+								<div class="text">
+									<div class="chat-message chat-message-image">
+														<img src="`+message+`" style="width: 300px" alt="Image description">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>`;
 				$("#msgContainer")[0].scrollIntoView(false)
 			}
 		}
@@ -135,66 +166,48 @@
 			$("#msgContainer")[0].scrollIntoView(false)
 		}
         document.getElementById("sendToUser").addEventListener("click", function (event) {
-			var message = document.getElementById("messageInput").value;
-			connection.invoke("SendToUser", @Model.account.Id , @Model.accounts[0].Id ,message , 'text' ).catch(function (err) {
-                return console.error(err.toString());
-            });
-            event.preventDefault();
-			sentMessage(message);
-			$("#msgContainer")[0].scrollIntoView(false)
+			if (image == null ) {
+				var message = document.getElementById("messageInput").value;
+				connection.invoke("SendToUser", @Model.account.Id , @Model.accounts[0].Id , message, 'text').catch(function (err) {
+					return console.error(err.toString());
+				});
+				event.preventDefault();
+				sentMessage(message);
+				$("#msgContainer")[0].scrollIntoView(false)
+			} else  {
+				console.log("yupwefuckedup");
+				sentImageClickButton();
+				image = null;
+			}
+			
         });
+		
+		
 		/////////////////////////////////////////////////////////////////////////////////
 		$('#imageUpload').change(function () {
-
+			console.log("fffffffffffffffk");
 
 			var file = this.files[0];
-
+			image = this.files[0];
 			// Preview the image using FileReader
 			if (file) {
 				var reader = new FileReader();
 				reader.onload = function (e) {
-					
 					document.getElementById("iamgesContainer").innerHTML =
-						`<img id="uploadedImage" style="width: 100px; height: 100px; margin-right: 30px;" src="`+e.target.result+`" id="impPrev" />
-													<button> <img src="/img/close.png" id="close" style="position: absolute; top: 5px; right: 35px;width:20px;" /></button>
+						`
+							<img id="uploadedImage" style="width: 100px; height: 100px; margin-right: 30px;" src="`+e.target.result+`" id="impPrev" />
+							<button> <img src="/img/close.png" id="close" style="position: absolute; top: 5px; right: 35px;width:20px;" /></button>
 						`;
 
 					document.getElementById("content").style.marginBottom = "-70px";
-					document.getElementById("bottom").style.marginTop = "30px";
-					
-
-					
-
+					document.getElementById("bottom").style.marginTop = "30px";			
 				};
 				reader.readAsDataURL(file);
 			}
-		
-
 			
-			var formData = new FormData();
-			formData.append('image', file);
-			formData.append('senderId', '@Model.account.Id');
-			formData.append('recieverId', '@Model.accounts[0].Id');
-
-			$.ajax({
-				url: '/Home/UploadImage',
-				type: 'POST',
-				data: formData,
-				contentType: false, // Required for FormData
-				processData: false, // Required for FormData
-				success: function (path) {
-					sentImage(path);
-					connection.invoke("SendToUser", @Model.account.Id, @Model.accounts[0].Id, path, 'image')
-						.catch(function (err) {
-							console.error(err.toString());
-						});
-				},
-				error: function (error) {
-					// Handle errors here
-				}
-			});
 		});
 
+		
 		
 
 	</script>
